@@ -111,6 +111,7 @@ extern int map_adventure_offset_y;
 "SEG0, SEG1, ...., SEG7: memory banks mapped on each 8 memory segments on TBBlue\n" \
 "HILOWMAPPED: returns 1 if HiLow ROM & RAM is mapped\n" \
 "PD765PCN: current cylinder of PD765 floppy drive\n" \
+"VAR0, VAR1, ... VAR9: user variables, can be set with action let\n" \
 "MRV: value returned on read memory operation\n" \
 "MWV: value written on write memory operation\n" \
 "MRA: address used on read memory operation\n" \
@@ -195,6 +196,7 @@ extern int map_adventure_offset_y;
 "menu or break or empty string: Breaks current execution of program\n" \
 "call address: Calls memory address, address is an expression\n" \
 "disassemble address: Dissassemble address, address is an expression\n" \
+"let varX=expression: Assign expression to a user variable, where X is in range 0..9\n"
 "printc expression: Print ascii character to console\n" \
 "printe expression: Print expression following the same syntax as breakpoints and evaluate expression\n" \
 "printregs: Print registers\n" \
