@@ -30,6 +30,7 @@ Improved debug cpu:
 - Views 5 and 6 use a different memptr ("memptx")
 - Show when memory is modified by last opcode execution on views 5 and 6
 - Direct key (t) to evaluate expressions
+- Added user variables VAR0, VAR1, ... VAR9
 
 Fixed reading port BFFD on Spectrum +2A/+3
 Fixed loading tape with --tape and --realtape and autoload snapshot on start
